objects/Ez_Commit__c.object
<CustomObject>
    <fields>
        <fullName>Conflict_Resolution_1__c</fullName>
        <label>Conflict Resolution 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conflict_Resolution_2__c</fullName>
        <label>Conflict Resolution 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Picklist_1__c</fullName>
        <label>Picklist 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_2__c</fullName>
        <label>Picklist 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Test__c</fullName>
        <label>Picklist Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                    <label>ab</label>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Diff__c</fullName>
        <label>Test Diff</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ez Commit</relationshipLabel>
        <relationshipName>Ez_Commit</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ez Commit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ez Commit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ez Commit</pluralLabel>
    <recordTypes>
        <fullName>Commit_record_type</fullName>
        <active>true</active>
        <label>Commit record type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>